--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -25,13 +25,11 @@
             <ul>
                 <li>Email: <a href="mailto:ferrisfire@gmail.com">ferrisfire@gmail.com</a></li>
                 <li>Phone: 443-615-1749</li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/your-profile">linkedin.com/in/your-profile</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/ian-ferris-a26795297/">linkedin.com/in/your-profile</a></li>
             </ul>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Ian Ferris. All Rights Reserved.</p>
-    </footer>
+    
 </body>
 </html>
