--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">About Me</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="clips.html">Clips</a></li>
                 <li><a href="contact.html">Contact</a></li>
